...
    <string name="search_btn_description">Search</string>
    <string name="back_btn_description">Back</string>

    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="apply">Apply</string>
    <string name="erase">Erase</string>

    <!-- Profile Fragment -->
    <string name="profile_title">Profile</string>
    <string name="modify_password">Modify password</string>
...
    <string name="new_task">New task</string>
    <string name="bin_btn_description">Cleanup</string>

    <!-- To-do Management -->
    <string name="list_activity_title">My lists</string>
    <string name="new_list_btn_description">Add a new to-do</string>
    <string name="add_todo_suggestion">Enter the title of your to-do list</string>
    <string name="rename_todo_suggestion">Rename your to-do list</string>
    <string name="delete_todo_suggestion">Are you sure to delete this to-do?</string>

    <!-- Note Management -->
    <string name="note_activity_title">My notes</string>
    <string name="new_note_btn_description">Add a new note</string>
    <string name="add_note_suggestion">Enter the title of your note</string>
    <string name="delete_note_suggestion">Are you sure to delete this note?</string>
...
    <string name="current_location_message">I\'m here</string>
    <string name="location_not_found">Location not found !</string>
    <string name="location_btn_description">Location</string>
    <string name="note_location">No location</string>

    <!-- Voice Recording -->
    <string name="is_recording">Recording…</string>
    <string name="stop_recording">Stopped the recording</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="record_button">Record</string>
    <string name="stop_record_button">Stop recording</string>
    <string name="audio_btn_description">Audio</string>

    <!-- Note editor -->
    <string name="bold">Bold</string>
    <string name="italics">Italics</string>
    <string name="underline">Underline</string>
...
