...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <EditText
        android:id="@+id/alert_dialog_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/title_todo"
        android:backgroundTint="@color/dark_grey"
...
